--- a/prac_07/box_layout.kv
+++ b/prac_07/box_layout.kv
@@ -2,8 +2,15 @@ BoxLayout:
     orientation: 'vertical'
 #    orientation: 'horizontal'
     Button:
-        text: 'one'
+        text: 'Clear'
+        on_press: app.handle_event()
+    TextInput:
+        id: input_name
+        text: ''
     Button:
-        text: 'two'
-    Button:
-        text: 'three'
+        text: 'Greet'
+        on_press: app.handle_greet()
+    Label:
+        text: 'Enter your name'
+        color: (1, 1, 0, 1)
+        id: output_label
