--- a/prac_07/box_layout.kv
+++ b/prac_07/box_layout.kv
@@ -1,6 +1,6 @@
 BoxLayout:
-    orientation: 'vertical'
-#    orientation: 'horizontal'
+    orientation: 'vertical' # can change to 'horizontal'
+
     Button:
         text: 'Clear'
         on_press: app.handle_event()
