--- a/prac_07/convert_mile_km.kv
+++ b/prac_07/convert_mile_km.kv
@@ -5,7 +5,7 @@ BoxLayout:
         TextInput:
             id: input_miles
             font_size: 48
-            on_text: app.handle_calculate(self.text)
+#            on_text: app.handle_calculate(self.text)
         BoxLayout:
             orientation: 'vertical'
             size_hint_x: 0.25
@@ -15,9 +15,11 @@ BoxLayout:
             Button:
                 text: 'Down'
                 on_press: app.handle_increment(input_miles.text, -1)
-#    Button:
-#        text: 'Convert m to km'
-#        on_press: app.handle_calculate()
+    BoxLayout:
+        orientation: 'horizontal'
+        Button:
+            text: 'Convert mile to km'
+            on_press: app.handle_calculate(input_miles.text)
     Label:
         id: output_label
         text: app.output_km
