--- a/prac_07/convert_miles_to_kms.kv
+++ b/prac_07/convert_miles_to_kms.kv
@@ -5,7 +5,7 @@ BoxLayout:
         TextInput:
             id: input_miles
             font_size: 48
-#            on_text: app.handle_calculate(self.text)
+            on_text: app.handle_calculate(self.text)
         BoxLayout:
             orientation: 'vertical'
             size_hint_x: 0.25
